--- a/publications.html
+++ b/publications.html
@@ -29,9 +29,19 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
+<div class=publication> Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
+  Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
+  Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
+  Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
+  Katherine Melocik, Jesse Meyer, Scott Sinno, Eric Romero, Erin
+  Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
+  Fensholt. An unexpectedly large count of trees in the western Sahara
+  and Sahel. <em>Nature</em>, to appear
+</div>
+  
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
-<a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for
+<a>Algorithms for
   Estimating the Partition Function of Restricted Boltzmann Machines  (Extended Abstract)</a>. 
   <em>International Joint Conferences on Artificial Intelligence (IJCAI)</em>, 2020
 </div>
