--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,16 @@ scholar profile</a>.
   Fensholt. An unexpectedly large count of trees in the western Sahara
   and Sahel. <em>Nature</em>, to appear
 </div>
-  
+
+
+
+
+<div class=publication>
+  &Uuml;r&uuml;, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
+  Label-similarity Curriculum Learning. <em>European Conference
+  on Computer Vision (ECCV)</em>, accepted
+  </div>
+
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
 <a>Algorithms for
