--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@ scholar profile</a>.
 
 
 <div class=publication>
-  &Uuml;r&uuml;, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
+  &Uuml;r&uuml;n Dogan, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
   Label-similarity Curriculum Learning. <em>European Conference
   on Computer Vision (ECCV)</em>, accepted
   </div>
