--- a/publications.html
+++ b/publications.html
@@ -48,12 +48,6 @@ scholar profile</a>.
   on Computer Vision (ECCV)</em>, accepted
   </div>
 
-<div class=publication>
-Oswin Krause, Asja Fischer, and Christian Igel. 
-<a>Algorithms for
-  Estimating the Partition Function of Restricted Boltzmann Machines  (Extended Abstract)</a>. 
-  <em>International Joint Conferences on Artificial Intelligence (IJCAI)</em>, 2020
-</div>
   
 
   
@@ -67,8 +61,17 @@ Oswin Krause, Asja Fischer, and Christian Igel.
   <em>Artificial Intelligence</em> <vol>278</vol>, 2020
 </div>
 
-<a name="y19"></a>
+<div class=publication>
+Oswin Krause, Asja Fischer, and Christian Igel. 
+<a href="https://doi.org/10.24963/ijcai.2020/704">Algorithms for
+  Estimating the Partition Function of Restricted Boltzmann Machines  (Extended Abstract)</a>. 
+  <em>International Joint Conferences on Artificial Intelligence
+  (IJCAI)</em>, pp. 5045-5049, 2020
+</div>
 
+
+<a name="y19"></a>
+ 
 <h4>2019</h4>
 
 
