--- a/publications.html
+++ b/publications.html
@@ -39,15 +39,10 @@ scholar profile</a>.
   and Sahel. <em>Nature</em>, to appear
 </div>
 
-
-
-
 <div class=publication>
-  &Uuml;r&uuml;n Dogan, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
-  Label-similarity Curriculum Learning. <em>European Conference
-  on Computer Vision (ECCV)</em>, accepted
-  </div>
-
+  Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe and Christian Igel.
+Do End-to-End Speech Recognition Models Care About Context? <em>Interspeech</em>, 2020
+</div>
   
 
   
@@ -60,6 +55,12 @@ Oswin Krause, Asja Fischer, and Christian Igel.
 <a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines</a>. 
   <em>Artificial Intelligence</em> <vol>278</vol>, 2020
 </div>
+
+<div class=publication>
+  &Uuml;r&uuml;n Dogan, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
+  Label-similarity Curriculum Learning. <em>European Conference
+  on Computer Vision (ECCV)</em>, 2020
+  </div>
 
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
