--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,8 @@ scholar profile</a>.
 
 <div class=publication>
   Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe and Christian Igel.
-Do End-to-End Speech Recognition Models Care About Context? <em>Interspeech</em>, 2020
+Do End-to-End Speech Recognition Models Care About Context?
+  <em>Interspeech 2020</em>, accepted
 </div>
   
 
