--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-<div class=publication> Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
+<div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
   Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
   Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
   Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
@@ -707,7 +707,7 @@ In H.G. Beyer and W. B. Langdon, eds.: <em>Foundations of Genetic
 
 
 <div class=publication>Verena Heidrich-Meisner and Christian Igel.
-<a href="http://www.dice.ucl.ac.be/Proceedings/esann/esannpdf/es2011-75.pdf">Non-linearly Increasing Resampling in Racing Algorithms</a>. In  M. Verleysen, ed.:
+<a href="https://hal.inria.fr/inria-00633006/document">Non-linearly Increasing Resampling in Racing Algorithms</a>. In  M. Verleysen, ed.:
 <em>19th European Symposium on Artificial Neural
 Networks (ESANN 2011)</em>, pp. 465-470, Belgium: d-side
  publications, 2011
@@ -1470,12 +1470,12 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 conferences and journals</h3>
 
 <div class=publication>
-Arjun D Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
+Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
 Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
 Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
 OBrien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
-Igel, Erik B Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
-Li, Cem M Deniz, Vladimir Juras, Ravinder Regatte, Garry E Gold, Brian
+Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
+Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
 A Hargreaves, Valentina Pedoia, Akshay S Chaudhari. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
 </div>
 
