--- a/publications.html
+++ b/publications.html
@@ -45,12 +45,29 @@ Do End-to-End Speech Recognition Models Care About Context?
   <em>Interspeech 2020</em>, accepted
 </div>
   
+<div class=publication>
+Steffen Czolbe, Oswin Krause, Ingemar Cox, Christian Igel
+<a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2020)</em>, 2020
+</div>
+
+
+<div class=publication>
+ Andrés R. Masegosa, Stephan S. Lorenzen,Christian Igel, Yevgeny Seldin.
+<a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS 2020)</em>, 2020
+</div>
 
   
 
 <a name="y20"></a>
 
 <h4>2020</h4>
+
+
+
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
 <a href="https://doi.org/10.1016/j.artint.2019.103195">Algorithms for Estimating the Partition Function of Restricted Boltzmann Machines</a>. 
@@ -1476,7 +1493,10 @@ Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
 OBrien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
 Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-A Hargreaves, Valentina Pedoia, Akshay S Chaudhari. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
+  A Hargreaves, Valentina Pedoia, Akshay S Chaudhari.
+  A multi-institute automated segmentation evaluation on a standard
+  dataset: Findings from the international workshop on osteoarthritis
+  imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
 </div>
 
 <div class=publication>
