--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@ Do End-to-End Speech Recognition Models Care About Context?
 Steffen Czolbe, Oswin Krause, Ingemar Cox, Christian Igel
 <a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
   <em>Advances in Neural Information Processing Systems
-  (NeurIPS 2020)</em>, 2020
+  (NeurIPS)</em>, 2020, accepted
 </div>
 
 
@@ -57,7 +57,7 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, Christian Igel
  Andrés R. Masegosa, Stephan S. Lorenzen,Christian Igel, Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
   <em>Advances in Neural Information Processing Systems
-  (NeurIPS 2020)</em>, 2020
+  (NeurIPS)</em>, 2020, accepted
 </div>
 
   
