--- a/publications.html
+++ b/publications.html
@@ -40,13 +40,13 @@ scholar profile</a>.
 </div>
 
 <div class=publication>
-  Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe and Christian Igel.
+  Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe, and Christian Igel.
 Do End-to-End Speech Recognition Models Care About Context?
   <em>Interspeech 2020</em>, accepted
 </div>
   
 <div class=publication>
-Steffen Czolbe, Oswin Krause, Ingemar Cox, Christian Igel
+Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 <a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS)</em>, 2020, accepted
@@ -54,7 +54,7 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, Christian Igel
 
 
 <div class=publication>
- Andrés R. Masegosa, Stephan S. Lorenzen,Christian Igel, Yevgeny Seldin.
+ Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
 <a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS)</em>, 2020, accepted
