less unsecure links

--- a/downloads.html
+++ b/downloads.html
@@ -27,7 +27,7 @@
   <a href="#Rprop">Rprop</a>
   <a href="#GTSRB">Traffic Signs</a>
 </div>
-  <a href="http://ai.ku.dk">AI Centre</a>
+  <a href="https://ai.ku.dk">AI Centre</a>
   <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 
@@ -99,8 +99,8 @@ Christian Igel.
 <p>
 
 <h2>bufferkdtree</h2>
-<a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
-style="margin: 10px 10px 20px 10px"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
+<a href="https://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
+style="margin: 10px 10px 20px 10px"  width="200" align=right src="https://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
 Download <a href="http://bufferkdtree.readthedocs.io">bufferkdtree</a>
 for blistering fast 
 nearest neighbor seach on GPUs.
