--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
-  <a href="http://ai.ku.dk">AI Centre</a>
+  <a href="https://ai.ku.dk">AI Centre</a>
   <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 <div id="inner-page">
@@ -132,7 +132,7 @@ Igel, and Tom Heskes. Bigger Buffer k-d Trees
 In: Senger H. et al., eds.:  
 <em>High Performance Computing for Computational Science (VECPAR 2018)</em>,
 LNCS <vol>11333</vol>,
-  pp. 202-214,Springer-Verlag, 2019 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
+  pp. 202-214,Springer-Verlag, 2019 <a href="https://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
 
 <div class=publication>
