--- a/downloads.html
+++ b/downloads.html
@@ -147,10 +147,7 @@ href="http://www.shark-ml.org">here.</a> <!-- at the SourceForge -->
 
  <h3>Video lecture</h3> 
 	Tobias Glasmachers' 2008 NIPS open source software workshop 
- 
-<a href='http://videolectures.net/mloss08_glasmachers_shark/'> 
-<!-- <img src='http://videolectures.net/mloss08_glasmachers_shark/thumb.jpg' border=0/> --> 
-video lecture</a> on Shark.
+<a href='http://videolectures.net/mloss08_glasmachers_shark/'>video lecture</a> on Shark.
 
  
 <h3>Paper describing the library</h3> 
@@ -164,8 +161,6 @@ video lecture</a> on Shark.
 <p> 
 
 <h2>nnratio</h2>
-<!--  <a href="https://github.com/kremerj/nnratio"><img alt="[nnratio]" vspace="10" hspace="20"  width="400" align=right src="http://github.com/kremerj/nnratio/blob/master/images/example.png" border=0></a>-->
-
 Go to <a href="https://github.com/kremerj/nnratio">nnratio</a> for a
     nearest neighbor density ratio estimator implemented in Python.
 
