--- a/publications.html
+++ b/publications.html
@@ -247,8 +247,8 @@ Mathias Perslev, Akshay  Pai, Christian Igel, and Erik Dam. Knee
 
 <a name="y17"></a>
 <h4>2017</h4>
-<div class=publication><a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
-style="margin: 0px 10px 20px 10px"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
+<div class=publication><a href="https://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
+style="margin: 0px 10px 20px 10px"  width="200" align=right src="https://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
   <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Oancea, and Christian  Igel.
  bufferkdtree: A Python Library for Massive Nearest Neighbor Queries on Multi-Many-Core Devices.
   <em>Knowledge-Based Systems</em> <vol>120</vol>, pp. 1-3, 2017 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
