--- a/publications.html
+++ b/publications.html
@@ -249,9 +249,9 @@ Mathias Perslev, Akshay  Pai, Christian Igel, and Erik Dam. Knee
 <h4>2017</h4>
 <div class=publication><a href="https://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
 style="margin: 0px 10px 20px 10px"  width="200" align=right src="https://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
-  <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Oancea, and Christian  Igel.
+  <a href="https://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Oancea, and Christian  Igel.
  bufferkdtree: A Python Library for Massive Nearest Neighbor Queries on Multi-Many-Core Devices.
-  <em>Knowledge-Based Systems</em> <vol>120</vol>, pp. 1-3, 2017 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
+  <em>Knowledge-Based Systems</em> <vol>120</vol>, pp. 1-3, 2017 <a href="https://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
 
 
@@ -684,8 +684,8 @@ B. Sriperumbudur, organizers:
 <div class=publication>
 <a
   href="http://www.ims.uni-hannover.de/de/institut/mitarbeiter/portrait/blume/">Holger
-  Blume</a>, <a href="http://www.statistik.uni-dortmund.de/bischl.html">Bernd Bischl</a>, Martin Botteck, Christian Igel, <a href="www.ruhr-uni-bochum.de/ika/mitarbeiter/martin.htm">Rainer
-Martin</a>,  G&uuml;nther R&ouml;tter,  <a
+  Blume</a>, <a href="http://www.statistik.uni-dortmund.de/bischl.html">Bernd Bischl</a>, Martin Botteck, Christian Igel, Rainer
+Martin,  G&uuml;nther R&ouml;tter,  <a
   href="http://ls11-www.cs.uni-dortmund.de/people/rudolph">G&uuml;nter
   Rudolph</a>,  Wolfgang Theimer, Igor Vatolkin, and <a
   href="http://www.statistik.uni-dortmund.de/weihs.html">Claus Weihs</a>.
