--- a/publications.html
+++ b/publications.html
@@ -29,15 +29,7 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-<div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
-  Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
-  Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
-  Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
-  Katherine Melocik, Jesse Meyer, Scott Sinno, Eric Romero, Erin
-  Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
-  Fensholt. An unexpectedly large count of trees in the western Sahara
-  and Sahel. <em>Nature</em>, to appear
-</div>
+
 
 <div class=publication>
   Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe, and Christian Igel.
@@ -66,7 +58,17 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 
 <h4>2020</h4>
 
-
+<div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
+  Christin Abel, Jennifer Small, Jerome Chave, Laura Vang Rasmussen,
+  Pierre Hiernaux, Abdoul Aziz Diouf, Laurent Kergoat, Ole Mertz,
+  Christian Igel, Fabian Gieseke, Johannes Schöning, Sizhuo Li,
+  Katherine Melocik, Jesse Meyer, Scott Sinno, Eric Romero, Erin
+  Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
+  Fensholt. <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
+  and Sahel</a>. <em>Nature</em>, 2020  <a
+  href="https://www.nature.com/articles/d41586-020-02830-3"
+  class="sup">popular science summary</a>
+</div>
 
 <div class=publication>
 Oswin Krause, Asja Fischer, and Christian Igel. 
