--- a/publications.html
+++ b/publications.html
@@ -32,12 +32,6 @@ scholar profile</a>.
 
 
 <div class=publication>
-  Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe, and Christian Igel.
-Do End-to-End Speech Recognition Models Care About Context?
-  <em>Interspeech 2020</em>, accepted
-</div>
-  
-<div class=publication>
 Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 <a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
   <em>Advances in Neural Information Processing Systems
@@ -76,10 +70,19 @@ Oswin Krause, Asja Fischer, and Christian Igel.
   <em>Artificial Intelligence</em> <vol>278</vol>, 2020
 </div>
 
+
+<div class=publication>
+  Lasse Borgholt, Jakob Drachmann Havtorn, Željko Agić, Anders Søgaard, Lars Maaløe, and Christian Igel.
+<a href="http://www.interspeech2020.org/index.php?m=content&c=index&a=show&catid=356&id=1194">Do End-to-End Speech Recognition Models Care About Context?</a>
+  <em>Interspeech 2020</em>, 2020
+</div>
+  
+
 <div class=publication>
   &Uuml;r&uuml;n Dogan, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
-  Label-similarity Curriculum Learning. <em>European Conference
-  on Computer Vision (ECCV)</em>, 2020
+  <a href="https://arxiv.org/abs/1911.06902">Label-similarity Curriculum Learning</a>. <em>European Conference
+  on Computer Vision (ECCV)</em>, LNCS <vol>12374</vol>,
+  pp. 174-190, Springer-Verlag, 2020
   </div>
 
 <div class=publication>
@@ -133,7 +136,7 @@ Igel, and Tom Heskes. Bigger Buffer k-d Trees
   on Multi-Many-Core Systems.
 In: Senger H. et al., eds.:  
 <em>High Performance Computing for Computational Science (VECPAR 2018)</em>,
-LNCS <vol>11333</vol>,
+  LNCS <vol>11333</vol>,
   pp. 202-214,Springer-Verlag, 2019 <a href="https://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
 
