--- a/index.html
+++ b/index.html
@@ -74,12 +74,19 @@ From 2003 to 2010, I was a Juniorprofessor for Optimization of
   2010, I was appointed professor with special duties in machine
 learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 
+<p>I am director of the <a href="http://ai.ku.dk">SCIENCE AI
+Centre</a>.
+You find a short article about the centre 
+<a href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. 
+
+</p>
+
+<p>I a Fellow of <a href="https://www.journals.elsevier.com/artificial-intelligence/">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
+
 <p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
 and an Associate Editor of the <a
 href="https://www.mitpressjournals.org/loi/evco">Evolutionary
 Computation Journal</a> (ECJ) and the <a href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial Intelligence Journal</a> (AIJ).</p>
-
-I am director of the <a href="http://ai.ku.dk">SCIENCE AI Centre</a>.
 
 
 <h3>Research Interests</h3>
@@ -115,7 +122,9 @@ scholar profile</a>.
   Fensholt. <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
   and Sahel</a>. <em>Nature</em>, 2020  <a
   href="https://www.nature.com/articles/d41586-020-02830-3"
-  class="sup">popular science summary</a>
+  class="sup">popular science summary</a>  <a
+  href="https://www.nature.com/articles/d41586-020-03514-8"
+  class="sup">10 remarkable discoveries from 2020</a>
 </div>
 
 
