--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@ learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 
 <p>I am director of the <a href="http://ai.ku.dk">SCIENCE AI
 Centre</a>.
-You find a short article about the centre 
+You can find a short article about the centre 
 <a href="https://www.nature.com/articles/d42473-020-00421-4">here</a>. 
 
 </p>
 
-<p>I a Fellow of <a href="https://www.journals.elsevier.com/artificial-intelligence/">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
+<p>I am a Fellow of <a href="https://www.journals.elsevier.com/artificial-intelligence/">ELLIS, European Lab for Learning and Intelligent System</a>.</p>
 
 <p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
 and an Associate Editor of the <a
@@ -133,6 +133,8 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 <a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS)</em>, 2020
+<a href="https://github.com/SteffenCzolbe/PerceptualSimilarity" class="sup">code</a> 
+<a href="https://www.youtube.com/watch?v=qPmHQbR4DeI&feature=youtu.be" class="sup">video</a> 
 </div>
 
 
