--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
 <a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
   <em>Advances in Neural Information Processing Systems
   (NeurIPS)</em>, 2020
-<a href="https://github.com/SteffenCzolbe/PerceptualSimilarity" class="sup">code</a> 
+<a href="https://github.com/SteffenCzolbe/PerceptualSimilarity"
+  class="sup">source code</a> 
 <a href="https://www.youtube.com/watch?v=qPmHQbR4DeI&feature=youtu.be" class="sup">video</a> 
 </div>
 
