--- a/publications.html
+++ b/publications.html
@@ -27,26 +27,9 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-<h4>Coming soon</h4><a name="top"></a> 
+<!-- <h4>Coming soon</h4><a name="top"></a> -->
 
 
-
-<div class=publication>
-Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
-<a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
-  <em>Advances in Neural Information Processing Systems
-  (NeurIPS)</em>, 2020, accepted
-</div>
-
-
-<div class=publication>
- Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
-<a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
-  <em>Advances in Neural Information Processing Systems
-  (NeurIPS)</em>, 2020, accepted
-</div>
-
-  
 
 <a name="y20"></a>
 
@@ -77,7 +60,19 @@ Oswin Krause, Asja Fischer, and Christian Igel.
   <em>Interspeech 2020</em>, 2020
 </div>
   
+<div class=publication>
+Steffen Czolbe, Oswin Krause, Ingemar Cox, and Christian Igel.
+<a href="https://arxiv.org/abs/2006.15057">A Loss Function for Generative Neural Networks Based on Watson's Perceptual Model</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS)</em>, 2020 
+ <a href="https://github.com/SteffenCzolbe/PerceptualSimilarity"
+  class="sup">source code</a> 
+<a href="https://www.youtube.com/watch?v=qPmHQbR4DeI&feature=youtu.be" class="sup">video</a> 
+</div>
 
+
+
+  
 <div class=publication>
   &Uuml;r&uuml;n Dogan, Aniket Anand Deshmukh, Marcin Machura, and Christian Igel.
   <a href="https://arxiv.org/abs/1911.06902">Label-similarity Curriculum Learning</a>. <em>European Conference
@@ -93,6 +88,13 @@ Oswin Krause, Asja Fischer, and Christian Igel.
   (IJCAI)</em>, pp. 5045-5049, 2020
 </div>
 
+
+<div class=publication>
+ Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgeny Seldin.
+<a href="https://arxiv.org/abs/2007.13532">Second Order PAC-Bayesian Bounds for the Weighted Majority Vote</a>.
+  <em>Advances in Neural Information Processing Systems
+  (NeurIPS)</em>, 2020
+</div>
 
 <a name="y19"></a>
  
