social media links

--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@ Professor, Dr. habil.
     </tbody>
   </table>
   <br>
-<!--  <table cellspacing="0" cellpadding="0" nosave="">
-    <tbody> 
-      <tr><td>Mail address:</td></tr>
-      <tr><td>University of Copenhagen</td></tr>
-      <tr><td>Department of Computer Science</td></tr>
-      <tr><td>Universitetsparken 5</td></tr>
-      <tr><td>2100 K&#248;benhavn &Oslash;</td></tr>
-    </tbody>
-  </table>
-  <br> -->
   <table cellspacing="0" cellpadding="0" nosave="">
     <tbody>
       <tr>
@@ -50,20 +40,19 @@ Professor, Dr. habil.
 	<td><a href="index.html#" onclick="this.href= 'mai' + 'lto:' + 'igel' + '&#64;' + 'di.ku.dk' ; return true;">igel<!-- @@@ -->&#64;<!-- @@@ -->diku<!-- nospam -->.<!-- nomorespam -->dk</a></td>
       </tr>
       <tr>
- <!--       <td>Office:</td>
-	<td>Universitetsparken 1, room 1.2.20</td>-->
-      </tr> 
-      <!-- <tr>
-        <td>Phone:</td>
-	<td>(+45) 35321414</td>
-      </tr>-->
         <td>Phone:</td>
 	<td>(+45) 21849673</td>
       </tr>
-	<tr>
+      <tr>
+	<!-- <td><img  src="images/linkedin-6-128.png" style="height: 24px"></td>
+	  <td><img  src="images/twitter-128.png" style="height:
+  24px"></td> -->
+	</tr>
     </tbody>
  </table>
 </dl>
+<a href="https://www.linkedin.com/in/christianigel"><img  src="images/linkedin-6-128.png" style="height: 24px"></a>
+<a href="https://twitter.com/christian_igel"><img  src="images/twitter-128.png" style="height: 24px"></a>
 <h3>Short CV</h3>
 <p>I am professor at <a href="http://diku.dk">DIKU</a>, the <a href="http://diku.kd">Department of
   Computer Science</a> at the <a href="http://ku.dk">University of Copenhagen</a>.
