--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@ Professor, Dr. habil.
  </table>
 </dl>
 <a href="https://www.linkedin.com/in/christianigel"><img  src="images/linkedin-6-128.png" style="height: 24px"></a>
-<a href="https://twitter.com/christian_igel"><img  src="images/twitter-128.png" style="height: 24px"></a>
+<a href="https://twitter.com/christian_igel"><img
+src="images/twitter-128.png" style="height: 24px"></a>
+<a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ"><img
+src="images/pngegg.png" style="height: 24px"></a>
 <h3>Short CV</h3>
 <p>I am professor at <a href="http://diku.dk">DIKU</a>, the <a href="http://diku.kd">Department of
   Computer Science</a> at the <a href="http://ku.dk">University of Copenhagen</a>.
