--- a/publications.html
+++ b/publications.html
@@ -29,15 +29,18 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
+<div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
+   On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
+Artificial Intelligence and Statistics (AISTATS), accepted
+</div>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
   Hansen, Christina Lioma, Christian Igel,
 Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
 Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
 Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
-Akshay, Mads Nielsen, and Martin Sillesen. Developing and Validating Covid-19 Adverse Outcome Risk
-Prediction Models From a Bi-national European Cohort of 5594
-  patients. <em>Scientific Reports</em>, accepted</div>
+Akshay Pai, Mads Nielsen, and Martin Sillesen. Developing and Validating Covid-19 Adverse Outcome Risk
+Prediction Models From a Bi-national European Cohort of 5594 Patients. <em>Scientific Reports</em>, in press</div>
 
 <a name="y20"></a>
 
