--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@ scholar profile</a>.
 
 <div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
    On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS), accepted
+Artificial Intelligence and Statistics (AISTATS)</em>, accepted
 </div>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
