--- a/publications.html
+++ b/publications.html
@@ -29,10 +29,7 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
-<div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
-   On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>, accepted
-</div>
+
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
   Hansen, Christina Lioma, Christian Igel,
@@ -41,6 +38,25 @@ Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfe
 Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
 Akshay Pai, Mads Nielsen, and Martin Sillesen. Developing and Validating Covid-19 Adverse Outcome Risk
 Prediction Models From a Bi-national European Cohort of 5594 Patients. <em>Scientific Reports</em>, in press</div>
+
+
+<div class=publication>
+  Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
+Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
+Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
+O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
+Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
+Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
+  A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
+  The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset.
+<em>Radiology: Artificial Intelligence</em>, accepted
+</div>
+
+<div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
+   On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
+Artificial Intelligence and Statistics (AISTATS)</em>, accepted
+</div>
+
 
 <a name="y20"></a>
 
@@ -1508,10 +1524,10 @@ conferences and journals</h3>
 Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
 Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
 Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
-OBrien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
+O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
 Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-  A Hargreaves, Valentina Pedoia, Akshay S Chaudhari.
+  A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
   A multi-institute automated segmentation evaluation on a standard
   dataset: Findings from the international workshop on osteoarthritis
   imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
