--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,13 @@ Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bu
 Akshay Pai, Mads Nielsen, and Martin Sillesen. Developing and Validating Covid-19 Adverse Outcome Risk
 Prediction Models From a Bi-national European Cohort of 5594 Patients. <em>Scientific Reports</em>, in press</div>
 
+<div class=publication>
+Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
+  Christian Igel. On scaling contrastive representations for low
+  resource speech recognition. <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
+</div>
+
 <div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
    On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
 Artificial Intelligence and Statistics (AISTATS)</em>, accepted
