--- a/publications.html
+++ b/publications.html
@@ -46,8 +46,9 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
 Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
 Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
 Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
-Akshay Pai, Mads Nielsen, and Martin Sillesen. Developing and Validating Covid-19 Adverse Outcome Risk
-Prediction Models From a Bi-national European Cohort of 5594 Patients. <em>Scientific Reports</em>, in press</div>
+Akshay Pai, Mads Nielsen, and Martin
+  Sillesen. <a href="https://www.nature.com/articles/s41598-021-81844-x">Developing and Validating Covid-19 Adverse Outcome Risk
+Prediction Models From a Bi-national European Cohort of 5594 Patients</a>. <em>Scientific Reports</em>, in press</div>
 
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
