--- a/publications.html
+++ b/publications.html
@@ -41,15 +41,6 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
 <em>Radiology: Artificial Intelligence</em>, accepted
 </div>
 
-<div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
-  Hansen, Christina Lioma, Christian Igel,
-Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
-Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
-Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
-Akshay Pai, Mads Nielsen, and Martin
-  Sillesen. <a href="https://www.nature.com/articles/s41598-021-81844-x">Developing and Validating Covid-19 Adverse Outcome Risk
-Prediction Models From a Bi-national European Cohort of 5594 Patients</a>. <em>Scientific Reports</em>, in press</div>
-
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
   Christian Igel. On scaling contrastive representations for low
@@ -63,8 +54,23 @@ Artificial Intelligence and Statistics (AISTATS)</em>, accepted
 </div>
 
 
-<a name="y20"></a>
+<a name="y21"></a>
 
+<h4>2021</h4>
+
+<div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
+  Hansen, Christina Lioma, Christian Igel,
+Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
+Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
+Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
+Akshay Pai, Mads Nielsen, and Martin
+  Sillesen. <a href="https://www.nature.com/articles/s41598-021-81844-x">Developing and Validating Covid-19 Adverse Outcome Risk
+Prediction Models From a Bi-national European Cohort of 5594
+  Patients</a>. <em>Scientific Reports</em> <vol>11</vol>, 3246, 2011</div>
+
+
+<a name="y20"></a>
+  
 <h4>2020</h4>
 
 <div class=publication>Martin Brandt, Compton J. Tucker, Ankit Kariryaa, Kjeld Rasmussen,
