--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Professor, Dr. habil.
 <a href="https://www.linkedin.com/in/christianigel"><img  src="images/linkedin-6-128.png" style="height: 24px"></a>
 <a href="https://twitter.com/christian_igel"><img
 src="images/twitter-128.png" style="height: 24px"></a>
-<a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ"><img
+<a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&sortby=pubdate"><img
 src="images/pngegg.png" style="height: 24px"></a>
 <h3>Short CV</h3>
 <p>I am professor at <a href="http://diku.dk">DIKU</a>, the <a href="http://diku.kd">Department of
