--- a/publications.html
+++ b/publications.html
@@ -38,19 +38,19 @@ Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
   A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
   <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
-<em>Radiology: Artificial Intelligence</em>, accepted
+<em>Radiology: Artificial Intelligence</em>, in press
 </div>
 
 <div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
   Christian Igel. On scaling contrastive representations for low
   resource speech recognition. <em>IEEE International Conference on
-  Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
+  Acoustics, Speech and Signal Processing (ICASSP)</em>, in press
 </div>
 
 <div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
    On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>, accepted
+Artificial Intelligence and Statistics (AISTATS)</em>, in press
 </div>
 
 
@@ -66,7 +66,7 @@ Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bu
 Akshay Pai, Mads Nielsen, and Martin
   Sillesen. <a href="https://www.nature.com/articles/s41598-021-81844-x">Developing and Validating Covid-19 Adverse Outcome Risk
 Prediction Models From a Bi-national European Cohort of 5594
-  Patients</a>. <em>Scientific Reports</em> <vol>11</vol>, 3246, 2011</div>
+  Patients</a>. <em>Scientific Reports</em> <vol>11</vol>, 3246, 2021</div>
 
 
 <a name="y20"></a>
@@ -1541,7 +1541,7 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
   A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
   A multi-institute automated segmentation evaluation on a standard
   dataset: Findings from the international workshop on osteoarthritis
-  imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2019
+  imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2020
 </div>
 
 <div class=publication>
