--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,9 @@ scholar profile</a>.
 
 <h4>Coming soon</h4><a name="top"></a> 
 
+
+
+  
 <div class=publication>
   Arjun D. Desai, Francesco Caliva, Claudia Iriondo, Naji Khosravan,
 Aliasghar Mortazi, Sachin Jambawalikar, Drew Torigian, Jutta Ellerman,
@@ -39,6 +42,17 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
   A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
   <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
 <em>Radiology: Artificial Intelligence</em>, in press
+</div>
+
+<div class=publication>
+  Mathias Perslev,
+  Sune Darkner,
+  Lykke Kempfner,
+  Miki Nikolic,
+Poul Jørgen Jennum, and
+Christian Igel. 
+U-Sleep: Resilient High-Frequency Sleep Staging
+  <em>npj Digital Medicine</em>, in press
 </div>
 
 <div class=publication>
