--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
   Miki Nikolic,
 Poul Jørgen Jennum, and
 Christian Igel. 
-U-Sleep: Resilient High-Frequency Sleep Staging
+U-Sleep: Resilient High-Frequency Sleep Staging.
   <em>npj Digital Medicine</em>, in press
 </div>
 
