added Rprop TF link

--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@ Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
 O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
 Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-  A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
+  A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
   <a href="https://arxiv.org/abs/2004.14003">The International Workshop on Osteoarthritis Imaging Knee MRI Segmentation Challenge: A Multi-Institute Evaluation and Analysis Framework on a Standardized Dataset</a>.
 <em>Radiology: Artificial Intelligence</em>, in press
 </div>
@@ -73,7 +73,7 @@ Artificial Intelligence and Statistics (AISTATS)</em>, in press
 <h4>2021</h4>
 
 <div class=publication>Espen Jimenez-Solem, Tonny S. Petersen, Casper Hansen, Christian
-  Hansen, Christina Lioma, Christian Igel,
+  Hansen, Christ/ina Lioma, Christian Igel,
 Wouter Boomsma, Oswin Krause, Stephan Lorenzen,
 Raghavendra Selvan, Janne Petersen, Martin Erik Nyeland, Mikkel Zöllner Ankarfeldt, Gert Mehl Virenfeldt, Matilde WintherJensen, Allan Linneberg, Mostafa Mediphour Ghazi,
 Nicki Detlefsen, Andreas Lauritzen, Abraham George Smith, Marleen de Bruijne, Bulat Ibragimov, Jens Petersen, Martin Lillholm, Jon Middleton, Stine Hasling Mogensen, Hans-Christian Thorsen-Meyer, Anders Perner, Marie Helleberg, Benjamin Skov Kaas-Hansen, Mikkel Bonde, Alexander Bonde,
@@ -270,9 +270,9 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <div class=publication>
   Ciprian Florescu and Christian Igel.
-  <a href="https://openreview.net/forum?id=r1R0o7yDz">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
-  <em>6th International Conference on Learning Representations
-  Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
+  <a href="paper/RpropTF.pdf">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
+  <a href="https://openreview.net/forum?id=r1R0o7yDz"><em>6th International Conference on Learning Representations
+		  Workshop Track (ICLR 2018 Workshop Track)</em></a>, 2018
 </div>
 
 <div class=publication>
@@ -1552,7 +1552,7 @@ Mehmet Akcakaya, Ulas Bagci, Radhika Tibrewala, Io Flament, Matthew
 O'Brien, Sharmila Majumdar, Mathias Perslev, Akshay Pai, Christian
 Igel, Erik B. Dam, Sibaji Gaj, Mingrui Yang, Kunio Nakamura, Xiaojuan
 Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
-  A Hargreaves, Valentina Pedoia, and Akshay S Chaudhari.
+  A Hargreaves, Valentina Pedoia, and Akshay S. Chaudhari.
   A multi-institute automated segmentation evaluation on a standard
   dataset: Findings from the international workshop on osteoarthritis
   imaging segmentation challenge. <em>Osteoarthritis and Cartilage</em> <vol>28</vol>, pp. S304–S305, 2020
