link to openreview

--- a/publications.html
+++ b/publications.html
@@ -270,9 +270,11 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <div class=publication>
   Ciprian Florescu and Christian Igel.
-  <a href="paper/RpropTF.pdf">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
-  <a href="https://openreview.net/forum?id=r1R0o7yDz"><em>6th International Conference on Learning Representations
-		  Workshop Track (ICLR 2018 Workshop Track)</em></a>, 2018
+  <a href="https://openreview.net/pdf?id=r1R0o7yDz">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
+  <!-- <a href="paper/RpropTF.pdf">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
+  <a href="https://openreview.net/forum?id=r1R0o7yDz"> --->
+	  <em>6th International Conference on Learning Representations
+		  Workshop Track (ICLR 2018 Workshop Track)</em> 2018
 </div>
 
 <div class=publication>
