--- a/publications.html
+++ b/publications.html
@@ -45,17 +45,6 @@ Li, Cem M. Deniz, Vladimir Juras, Ravinder Regatte, Garry E. Gold, Brian
 </div>
 
 <div class=publication>
-  Mathias Perslev,
-  Sune Darkner,
-  Lykke Kempfner,
-  Miki Nikolic,
-Poul Jørgen Jennum, and
-Christian Igel. 
-U-Sleep: Resilient High-Frequency Sleep Staging.
-  <em>npj Digital Medicine</em>, in press
-</div>
-
-<div class=publication>
 Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
   Christian Igel. On scaling contrastive representations for low
   resource speech recognition. <em>IEEE International Conference on
@@ -81,6 +70,17 @@ Akshay Pai, Mads Nielsen, and Martin
   Sillesen. <a href="https://www.nature.com/articles/s41598-021-81844-x">Developing and Validating COVID-19 Adverse Outcome Risk
 Prediction Models From a Bi-national European Cohort of 5594
   Patients</a>. <em>Scientific Reports</em> <vol>11</vol>, 3246, 2021</div>
+
+<div class=publication>
+  Mathias Perslev,
+  Sune Darkner,
+  Lykke Kempfner,
+  Miki Nikolic,
+Poul Jørgen Jennum, and
+Christian Igel. 
+<a href="https://rdcu.be/ciJT0">U-Sleep: Resilient High-Frequency Sleep Staging</a>.
+<em>npj Digital Medicine</em> <vol>4</vol>, 2021
+</div>
 
 
 <a name="y20"></a>
