--- a/publications.html
+++ b/publications.html
@@ -51,10 +51,6 @@ Lasse Borgholt, Tycho M. S. Tax, Jakob D. Havtorn, Lars Maaløe,
   Acoustics, Speech and Signal Processing (ICASSP)</em>, in press
 </div>
 
-<div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
-   On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>, in press
-</div>
 
 
 <a name="y21"></a>
@@ -80,6 +76,12 @@ Poul Jørgen Jennum, and
 Christian Igel. 
 <a href="https://rdcu.be/ciJT0">U-Sleep: Resilient High-Frequency Sleep Staging</a>.
 <em>npj Digital Medicine</em> <vol>4</vol>, 2021
+</div>
+
+<div class=publication>Kai Br&uuml;gge, Asja Fischer, and Christian Igel.
+   <a href='http://proceedings.mlr.press/v130/brugge21a/brugge21a.pdf'>On the convergence of the Metropolis algorithm with fixed-order updates for multivariate binary probability distributions</a>. <em>International Conference on 
+Artificial Intelligence and Statistics (AISTATS), Proceedings of Machine Learning Research</em>
+   <vol>130</vol>, pages 469-477, 2021
 </div>
 
 
